syntax = "proto3";
package vjdmhd.lottery.bet;

import "gogoproto/gogo.proto";
import "lottery/bet/params.proto";
import "lottery/bet/bet.proto";

option go_package = "github.com/vjdmhd/lottery/x/bet/types";

// GenesisState defines the bet module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated Bet active_bet_list = 2 [(gogoproto.nullable) = false];
  repeated Bet settled_bet_list = 3 [(gogoproto.nullable) = false];
}
